# 26s-w2-c2-06

./: .gitignore  CLAUDE.md  README.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/contracts/: __init__.py  assets.py  goal.py  maturity.py  onboarding.py  research.py  roadmap.py
backend/app/core/: config.py  db.py  gemini.py
backend/app/diagnosis/: __init__.py  draft.py  prompts.py  service.py
backend/app/fixtures/: goal_001.json  interview_answers_marketing.json  maturity_diagnosis_marketing.json  onboarding_001.json  research_context_goal_001.json  seed_findings_goal_001.json
backend/app/notion/: blocks.py  client.py  dashboard_blocks.py  diagnosis_blocks.py  guide_parser.py  models.py  oauth.py  progress.py  publish.py  rich_text.py  (+4 more)
backend/migrations/: env.py
backend/scripts/: demo_feature12.py  smoke_research.py
backend/tests/: conftest.py  test_contracts.py  test_diagnosis.py  test_diagnosis_blocks.py  test_gemini_schema.py  test_guide_parser.py  test_metrics_calculator.py  test_notion_auth_router.py  test_notion_blocks.py  test_notion_client.py  test_notion_errors.py  test_notion_oauth.py  test_notion_publish.py  test_notion_repository.py  test_notion_schemas.py  test_notion_sync.py  test_onboarding.py  test_opportunity_formatter.py  test_opportunity_router.py  test_progress.py  test_research.py  test_roadmap_router.py  test_roadmap_service.py  test_roadmap_stage_a.py  test_roadmap_stage_b.py  test_tracking_repository.py
(+68 files in other folders)
